--- a/Blog/templates/dashboard.html
+++ b/Blog/templates/dashboard.html
@@ -54,6 +54,7 @@
     <p class="welcome-text text-center mb-4">Hoş geldiniz, {{ session.username }}!</p>
     <hr class="w-50 mx-auto mb-5" style="border-color: #007BFF;">
 
+    <h4 class="mb-3">Kendi Makalelerim</h4>
     {% if articles %}
         <!-- Articles Table -->
         <div class="card shadow-sm article-table mb-4">
@@ -79,8 +80,6 @@
                                     <td>
                                         {% if article.created_date %}
                                             {{ article.created_date.strftime('%d.%m.%Y') }}
-                                        {% else %}
-                                            
                                         {% endif %}
                                     </td>
                                     <td>
@@ -102,6 +101,48 @@
             <h4 class="fw-bold mb-2" style="color: #003087;">Henüz Makale Eklenmemiş</h4>
             <p class="mt-2 mb-0">Blog yazılarınızı eklemeye başlayın!</p>
         </div>
+    {% endif %}
+
+    {% if is_admin and other_articles %}
+    <h4 class="mb-3 mt-5">Kullanıcı Makaleleri</h4>
+    <div class="card shadow-sm article-table mb-4">
+        <div class="card-body p-0">
+            <div class="table-responsive">
+                <table class="table table-striped table-hover mb-0">
+                    <thead style="background-color: #FFF3CD;">
+                        <tr>
+                            <th scope="col" style="width: 10%;">Id</th>
+                            <th scope="col" style="width: 30%;">Başlık</th>
+                            <th scope="col" style="width: 20%;">Yazar</th>
+                            <th scope="col" style="width: 20%;">Tarih</th>
+                            <th scope="col" style="width: 10%;"></th>
+                            <th scope="col" style="width: 10%;"></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for article in other_articles %}
+                            <tr>
+                                <th scope="row">{{ article.id }}</th>
+                                <td> <a href="/article/{{ article.id }}">{{ article.title }}</a></td>
+                                <td>{{ article.author }}</td>
+                                <td>
+                                    {% if article.created_date %}
+                                        {{ article.created_date.strftime('%d.%m.%Y') }}
+                                    {% endif %}
+                                </td>
+                                <td>
+                                    <a href="/edit/{{ article.id }}" class="btn btn-warning btn-sm">Düzenle</a>
+                                </td>
+                                <td>
+                                    <a href="/delete/{{ article.id }}" class="btn btn-danger btn-sm" onclick="return confirm('Bu makaleyi silmek istediğinizden emin misiniz?');">Sil</a>
+                                </td>
+                            </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
     {% endif %}
 
     <!-- Add New Article Button -->
