Update social media links in contact and index templates; replace outdated URLs with new profiles for GitHub, LinkedIn, Twitter, and Instagram.

--- a/Blog/templates/contact.html
+++ b/Blog/templates/contact.html
@@ -174,7 +174,7 @@
           <i class="bi bi-github card-icon"></i>
           <h5 class="card-title">GitHub</h5>
           <p class="card-text">Kodlarım ve açık kaynak projelerim burada!</p>
-          <a href="https://github.com/erkanTrg" target="_blank" class="card-link">GitHub'a Git</a>
+          <a href="https://github.com/Erkan3034" target="_blank" class="card-link">GitHub'a Git</a>
         </div>
       </div>
       <div class="col-12 col-md-6 col-lg-3 mb-4">
@@ -182,7 +182,7 @@
           <i class="bi bi-linkedin card-icon"></i>
           <h5 class="card-title">LinkedIn</h5>
           <p class="card-text">Profesyonel ağımda bana katıl!</p>
-          <a href="https://linkedin.com/in/erkanTrg" target="_blank" class="card-link">LinkedIn'e Bağlan</a>
+          <a href="https://linkedin.com/in/erkan1205" target="_blank" class="card-link">LinkedIn'e Bağlan</a>
         </div>
       </div>
       <div class="col-12 col-md-6 col-lg-3 mb-4">
@@ -190,7 +190,7 @@
           <i class="bi bi-medium card-icon"></i>
           <h5 class="card-title">Medium</h5>
           <p class="card-text">Makalelerim ve yazılarım için takip et!</p>
-          <a href="https://medium.com/@erkanTrg" target="_blank" class="card-link">Medium'da Oku</a>
+          <a href="https://medium.com/@turguterkan55" target="_blank" class="card-link">Medium'da Oku</a>
         </div>
       </div>
       <div class="col-12 col-md-6 col-lg-3 mb-4">
@@ -198,7 +198,7 @@
           <i class="bi bi-twitter card-icon"></i>
           <h5 class="card-title">Twitter</h5>
           <p class="card-text">Güncel paylaşımlarımı kaçırma!</p>
-          <a href="https://twitter.com/erkanTrg" target="_blank" class="card-link">Twitter'da Takip Et</a>
+          <a href="https://x.com/Erkan_0630" target="_blank" class="card-link">Twitter'da Takip Et</a>
         </div>
       </div>
       <div class="col-12 col-md-6 col-lg-3 mb-4">
@@ -206,7 +206,7 @@
           <i class="bi bi-instagram card-icon"></i>
           <h5 class="card-title">Instagram</h5>
           <p class="card-text">Hayatımın anlarını keşfet!</p>
-          <a href="https://instagram.com/erkanTrg" target="_blank" class="card-link">Instagram'da Gör</a>
+          <a href="https://instagram.com/coderr.zone target="_blank" class="card-link">Instagram'da Gör</a>
         </div>
       </div>
     </div>
