--- a/Blog/templates/index.html
+++ b/Blog/templates/index.html
@@ -14,9 +14,9 @@
       <p class="mb-0">Karmaşık problemleri çözmeyi, yeni teknolojiler öğrenmeyi ve öğrendiklerimi paylaşmayı seviyorum. Bu blogda yazılım dünyasındaki deneyimlerimi, projelerimi ve ilham aldığım konuları bulacaksınız.</p>
     </div>
     <div class="col-md-3 text-md-end text-center mt-3 mt-md-0">
-      <a href="#" class="text-dark me-2 fs-4" title="GitHub"><i class="bi bi-github"></i></a>
-      <a href="#" class="text-primary me-2 fs-4" title="LinkedIn"><i class="bi bi-linkedin"></i></a>
-      <a href="#" class="text-info fs-4" title="Twitter"><i class="bi bi-twitter"></i></a>
+      <a href="https://github.com/Erkan3034" class="text-dark me-2 fs-4" title="GitHub"><i class="bi bi-github"></i></a>
+      <a href="https://www.linkedin.com/in/erkanturgut1205" class="text-primary me-2 fs-4" title="LinkedIn"><i class="bi bi-linkedin"></i></a>
+      <a href="https://x.com/Erkan_0630" class="text-info fs-4" title="Twitter"><i class="bi bi-twitter"></i></a>
     </div>
   </div>
 
@@ -65,29 +65,6 @@
   <p class="mb-0">Blog yazılarımı okumak için lütfen giriş yapın.</p>
 </div>
 {% endif %}
-
-<!-- Koşul kullanımı
-{% if answer == 1 %}
-<p>Cevap 1</p>
-{% elif answer == 2 %}
-<p>Cevap 2</p>
-
-{% else %}
-<p>Cevap yok...</p>
-{% endif %}
--->
-
-<!-- Döngü Kullanımı start-->
-
-<!--
-<ul>
-  {% for article in articles  %}
-  
-  <li>Article Id : {{article.Id}}  /  Title : {{article.title}}  /  Content : {{article.content}}</li>
-  {% endfor %}
-</ul>
--->
-<!-- Döngü Kullanımı end-->
 
 
 {% endblock main %}
