Update profile image and social media links; replace outdated image and URLs with new GitHub, LinkedIn, Medium, and Twitter profiles.

--- a/Blog/templates/about.html
+++ b/Blog/templates/about.html
@@ -136,7 +136,7 @@
 <section class="about-section">
   <div class="container">
     <div class="about-header">
-      <img src="https://media.licdn.com/dms/image/v2/D4D35AQFyuZqE1oPgYg/profile-framedphoto-shrink_400_400/profile-framedphoto-shrink_400_400/0/1736008194524?e=1747407600&v=beta&t=j5XcRflRhqfT2etTiTjDqK0ku00G1USpMT96xrmVhjg" alt="Erkan Profile" class="about-image">
+      <img src="https://avatars.githubusercontent.com/u/159196857?v=4" alt="Erkan Profile" class="about-image">
       <h2 class="about-title">Hakkımda</h2>
       <div class="about-text">
         👨‍💻 Geliştirici | Yapay Zeka ve Full Stack Tutkunu | Dijital İçerik Üreticisi
@@ -173,10 +173,10 @@
       </div>
     </div>
     <div class="social-links">
-      <a href="https://github.com/erkanTrg" target="_blank"><i class="bi bi-github"></i></a>
-      <a href="https://linkedin.com/in/erkanTrg" target="_blank"><i class="bi bi-linkedin"></i></a>
-      <a href="https://medium.com/@erkanTrg" target="_blank"><i class="bi bi-medium"></i></a>
-      <a href="https://twitter.com/erkanTrg" target="_blank"><i class="bi bi-twitter"></i></a>
+      <a href="https://github.com/Erkan3034" target="_blank"><i class="bi bi-github"></i></a>
+      <a href="https://linkedin.com/in/erkan1205" target="_blank"><i class="bi bi-linkedin"></i></a>
+      <a href="https://medium.com/turguterkan55" target="_blank"><i class="bi bi-medium"></i></a>
+      <a href="https://twitter.com/Erkan_0630" target="_blank"><i class="bi bi-twitter"></i></a>
     </div>
   </div>
 </section>
