Add line-clamp property for article text truncation; enhance readability by limiting displayed lines to four.

--- a/Blog/templates/articles.html
+++ b/Blog/templates/articles.html
@@ -117,6 +117,7 @@
     text-overflow: ellipsis;
     display: -webkit-box;
     -webkit-line-clamp: 4;
+    line-clamp: 4;
     /* Maksimum 4 satır */
     -webkit-box-orient: vertical;
   }
