--- a/Blog/templates/about.html
+++ b/Blog/templates/about.html
@@ -175,7 +175,7 @@
     <div class="social-links">
       <a href="https://github.com/Erkan3034" target="_blank"><i class="bi bi-github"></i></a>
       <a href="https://linkedin.com/in/erkan1205" target="_blank"><i class="bi bi-linkedin"></i></a>
-      <a href="https://medium.com/turguterkan55" target="_blank"><i class="bi bi-medium"></i></a>
+      <a href="https://medium.com/@turguterkan55" target="_blank"><i class="bi bi-medium"></i></a>
       <a href="https://twitter.com/Erkan_0630" target="_blank"><i class="bi bi-twitter"></i></a>
     </div>
   </div>
